--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('index') }}">
+          <h1 class="navbar-brand">
             Todo List
-          </a>
+          </h1>
         </div>
     </nav>
     {% block body %}
